# coeus

./: .envrc  Cargo.toml  README.md
migrations/2018-09-04-193345_create_cohort_table/: down.sql  up.sql
migrations/2018-09-09-234133_create_player_stat_table/: down.sql  up.sql
src/: cohort.rs  fetcher.rs  identifier.rs  lib.rs  models.rs  parser.rs  schema.rs
